# bump-allocator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example1.cpp  main.cpp  tracker.h
bump/: HeapState.h  bump.h  default_formatter.h  formatter.h
cmake/: clangformat.cmake
include/: bump.h
src/: bump.cpp
